2011-01-27  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/47431
	* config.h.in: Regenerated.
	* configure: Regenerated.
	* configure.ac: Add check for ctime_r().
	* intrinsics/ctime.c (ctime_r): Fallback implementation.
	(fdate): Use ctime_r() instead of ctime().
	(fdate_sub): Likewise.
	(ctime): Likewise.
	(ctime_sub): Likewise.

2011-01-27  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/47432
	* config.h.in: Regenerated.
	* configure: Regenerated.
	* configure.ac: Add check for ttyname_r.
	* io/unix.h: Add TTY_NAME_MAX, change stream_ttyname prototype.
	* io/unix.c (stream_ttyname): Use ttyname_r if available, conform
	to new prototype.
	* io/inquire.c (inquire_via_unit): Use changed stream_ttyname.
	* io/intrinsics.c (ttynam_sub): Likewise.
	(ttynam): Likewise.

2011-01-27  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/47491
	* configure.ac: Call AC_USE_SYSTEM_EXTENSIONS to enable common
	extensions.
	* config.h.in: Regenerate.
	* configure: Regenerate.

2011-01-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/47285
	* io/write_float.def (output_float): Return SUCCESS or FAILURE and use
	the result to set the padding.

2011-01-26  Kai Tietz  <kai.tietz@onevision.com>

	* intrinsics/getlog.c (getlog): Fix label/statement issue.

2011-01-25  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/47375
	* config.h.in: Regenerated.
	* configure: Regenerated.
	* configure.ac: Add check for getpwuid_r.
	* intrinsics/getlog.c (getlog): Use getpwuid_r() if available.

2011-01-22  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/46267
	* config.h.in: Regenerated.
	* configure: Regenerated.
	* configure.ac: Check presence of strerror_r.
	* intrinsics/gerror.c (gerror): Use gf_strerror, modify logic.
	* io/unix.c (get_oserror): Remove.
	* libgfortran.h (gf_strerror): Add prototype.
	(get_oserror): Remove prototype.
	* runtime/error.c (gf_strerror): New function.
	(os_error): Use gf_strerror instead of get_oserror.
	(generate_errror): Likewise.
